feat/role-management : creating role management pattern

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=bpr_jatim_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=oong
+DB_PASSWORD=26122000
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
